<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:maxWidth="100dp"
            android:maxHeight="120dp"
            android:gravity="center"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/text_size_card_hint_big"
            android:background="@color/backgroundDialog"
            android:text="@string/tap_to_flip"
            android:singleLine="false"
            tools:ignore="RelativeOverlap"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_arrow_down"
                android:layout_centerHorizontal="true"
                android:src="@drawable/arrow_double_down"
                android:contentDescription="@string/arrow_down"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/image_arrow_down"
                android:layout_centerVertical="true"
                android:textSize="@dimen/text_size_card_hint_small"
                android:text="@string/text_card_hint_down"
                tools:ignore="RtlHardcoded"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_arrow_up"
                android:layout_centerHorizontal="true"
                android:src="@drawable/arrow_double_up"
                android:contentDescription="@string/arrow_up"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/image_arrow_up"
                android:layout_centerVertical="true"
                android:textSize="@dimen/text_size_card_hint_small"
                android:text="@string/text_card_hint_up"
                tools:ignore="RtlHardcoded"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            tools:ignore="RelativeOverlap,RtlHardcoded">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_arrow_right"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_double_right"
                android:contentDescription="@string/arrow_right"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/image_arrow_right"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/text_size_card_hint_small"
                android:text="@string/text_card_hint_right"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            tools:ignore="RelativeOverlap,RtlHardcoded">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_arrow_left"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_double_left"
                android:contentDescription="@string/arrow_left"
                tools:ignore="RtlHardcoded"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/image_arrow_left"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/text_size_card_hint_small"
                android:text="@string/text_card_hint_left"/>
    </RelativeLayout>

</RelativeLayout>