<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/StandardListItem"
            android:layout_marginTop="8dp">
        <TextView
                android:id="@+id/textview_dlg_module_whichside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ListItemTextView"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:text="@string/front_side_first"
                tools:ignore="RelativeOverlap"/>
        <Switch
                android:id="@+id/switch_dlg_module_whichside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <CheckBox
            android:id="@+id/cb_dlg_module_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StandardListItem"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:checked="true"
            android:text="@string/random_order"
            android:textSize="@dimen/text_size_list_item_primary"
            tools:ignore="RtlHardcoded,RtlSymmetry"/>

    <CheckBox
            android:id="@+id/cb_dlg_module_unanswered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StandardListItem"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:checked="true"
            android:text="@string/only_unanswered"
            android:textSize="@dimen/text_size_list_item_primary"
            tools:ignore="RtlHardcoded,RtlSymmetry"/>
</LinearLayout>